# girgitton

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CLAUDE_CODE_YORIQNOMA.md  Procfile  README.md  api.py  bajarildi.txt  config.py  helpers.py  jarayon.txt  main.py  nixpacks.toml  project.md  project2.md  pyproject.toml  railway.toml  requirements-app.txt  requirements.txt  scratch_dnd.py  sender.py  storage.py  vaqtincha.txt
.claude/: settings.json
.claude/agents/: bot-handler-reviewer.md  security-auditor.md  upload-engine-reviewer.md
.claude/commands/: build-app.md  deploy.md  verify.md
.claude/skills/batch-album-sender/: SKILL.md
.github/workflows/: build-release.yml  ci.yml  release.yml
app/: __main__.py  api_client.py  app_config.py  engine.py  gui.py  login_frame.py  main_frame.py  throttle_dialog.py  worker_pool.py
app/assets/: icon.icns
deploy/: Dockerfile  docker-compose.yml  nixpacks.toml  railway.toml
docs/: api-reference.md  architecture.md  onboarding.md  railway-deploy.md  runbook.md  security.md
installer/: girgitton.iss
scripts/: bot_commands.json  build_app.py  package.spec
src/girgitton/: __init__.py
src/girgitton/app/: __init__.py  __main__.py  api_client.py  config_store.py  connect_flow.py  deeplink.py  progress_store.py
src/girgitton/app/gui/: __init__.py  connect_dialog.py  main_frame.py  server_dialog.py  throttle_dialog.py  window.py
src/girgitton/app/upload/: __init__.py  batch.py  engine.py  rate_limit.py  worker_pool.py
src/girgitton/bot/: __init__.py  __main__.py  client.py
src/girgitton/bot/api/: __init__.py  middleware.py  routes.py  schemas.py  server.py
src/girgitton/bot/handlers/: __init__.py  access.py  decorators.py  enrollment.py  help.py  status.py
src/girgitton/core/: __init__.py  app_paths.py  config.py  constants.py  errors.py  logging_setup.py  models.py
src/girgitton/platform/: __init__.py
src/girgitton/shared/: __init__.py  crypto.py  media.py  repositories.py
src/girgitton/storage/: __init__.py  base.py  factory.py  json_store.py  redis_store.py
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/integration/: test_api_routes.py
tests/unit/: test_batch.py  test_config.py  test_config_store.py  test_crypto.py  test_deeplink.py  test_media.py  test_models.py  test_progress_store.py  test_rate_limit.py  test_storage_json.py
