[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata (PEP 621)
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "girgitton"
version = "3.2.1"
description = "Telegram media auto-sender — bot (Railway) + desktop app (local)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Girgitton Team" }]
keywords = ["telegram", "telethon", "media", "bot", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.34.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
app = [
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.3.0",
    "keyring>=25.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.8",
    "pip-audit>=2.7.0",
    "types-redis>=4.6.0",
    "types-aiofiles>=23.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Navkariya/girgitton"
Repository = "https://github.com/Navkariya/girgitton.git"

[project.scripts]
girgitton-bot = "girgitton.bot.__main__:main"
girgitton-app = "girgitton.app.__main__:main"

# ─────────────────────────────────────────────────────────────────────────────
# Setuptools — src layout
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]
include = ["girgitton*"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff — lint + format
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # bugbear
    "UP",        # pyupgrade
    "SIM",       # simplify
    "S",         # bandit-lite
    "RUF",       # ruff-specific
    "C4",        # comprehensions
    "TCH",       # type-checking imports
]
ignore = [
    "S101",  # assert in tests OK
    "S311",  # random not crypto context (pair codes use secrets)
    "RUF001", # O'zbekcha apostrof '
    "RUF002", # O'zbekcha apostrof docstringda
    "S104",   # 0.0.0.0 bind — Railway uchun zarur
    "S110",   # try/except/pass — Windows OSError pragma:no cover
    "SIM105", # try/except/pass vs contextlib.suppress (uslubiy)
    "B023",   # GUI lambda da default-arg pattern bilan tuzilgan loop variable
    "TC003",  # type-checking import (bizda __future__ annotations bor)
    "TC001",
    "TC002",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B011", "TC003", "TC001"]
"scripts/**" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────────────────────────────────────────────────────
# Mypy — strict types
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
files = ["src/girgitton"]
# GUI va Telethon/aiohttp dynamic frameworks strict-mode bilan moslashmaydi —
# pure Python (core, shared, storage) stricter, qolganlari relaxed.
exclude = [
    "src/girgitton/app/gui/",
    "src/girgitton/app/__main__\\.py",
    "src/girgitton/app/connect_flow\\.py",
    "src/girgitton/app/api_client\\.py",
    "src/girgitton/app/upload/",
    "src/girgitton/bot/__main__\\.py",
    "src/girgitton/bot/client\\.py",
    "src/girgitton/bot/handlers/",
    "src/girgitton/bot/api/middleware\\.py",
    "src/girgitton/bot/api/routes\\.py",
    "src/girgitton/bot/api/server\\.py",
    "src/girgitton/storage/redis_store\\.py",
    "src/girgitton/core/logging_setup\\.py",
    "src/girgitton/platform/",
]

[[tool.mypy.overrides]]
module = [
    "telethon.*",
    "tkinterdnd2.*",
    "customtkinter.*",
    "keyring.*",
    "PIL.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true


# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-q",
    "--strict-markers",
    "--cov=girgitton",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "unit: fast unit tests",
    "integration: requires aiohttp test server",
    "e2e: requires real .env credentials",
    "slow: takes > 1s",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/girgitton"]
branch = true
# Integration-og'ir modullar (Telethon/aiohttp test server bilan tekshiriladi)
omit = [
    "*/__main__.py",
    "*/gui/*",
    "*/bot/handlers/*",
    "*/bot/client.py",
    "*/app/upload/engine.py",
    "*/app/upload/worker_pool.py",
    "*/app/api_client.py",
    "*/app/connect_flow.py",
    "*/app/deeplink.py",
    "*/storage/redis_store.py",
    "*/platform/*",
    "*/core/logging_setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ─────────────────────────────────────────────────────────────────────────────
# Bandit
# ─────────────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "_archive", ".venv"]
skips = ["B101"]  # assert OK
